# wgc_capture_gpu

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_config.bat  build_wgc_capture.bat  direct_build.bat  dxgi_access.h  gpu_cuda_copy_test.py  requirements.txt  test.py  test_capture.cpp  test_capture_comparison.py  test_capture_performance.py  test_capture_python.py  wgc_advanced_gpu_example.py  wgc_callback_debug.py  wgc_capture.cpp  wgc_capture.cu  wgc_capture.exp  wgc_capture.h  wgc_capture_bind.cpp  wgc_gpu_callback_example.py  wgc_gpu_example.py  wgc_pybind.cpp
direct_build/: wgc_capture.exp
